groupheading + grouplink hinzugefügt

--- a/lang/de_de.lang
+++ b/lang/de_de.lang
@@ -34,6 +34,8 @@ rex_redactor2_profiles_plugins_fontcolor_description = Definiert die Schriftfarb
 rex_redactor2_profiles_plugins_fontfamily_description = Definiert die Schriftart
 rex_redactor2_profiles_plugins_fontsize_description = Definiert die Schriftgrösse
 rex_redactor2_profiles_plugins_fullscreen_description = Ermöglicht Vollbild
+rex_redactor2_profiles_plugins_groupheading_description = Fügt eine Überschrift via Dropdown ein
+rex_redactor2_profiles_plugins_grouplink_description = Fügt einen Link via Dropdown ein
 rex_redactor2_profiles_plugins_heading1_description = Fügt eine Überschrift der Grösse 1 ein
 rex_redactor2_profiles_plugins_heading2_description = Fügt eine Überschrift der Grösse 2 ein
 rex_redactor2_profiles_plugins_heading3_description = Fügt eine Überschrift der Grösse 3 ein
