--- a/lang/en_gb.lang
+++ b/lang/en_gb.lang
@@ -34,12 +34,14 @@ rex_redactor2_profiles_plugins_fontcolor_description = Defines the fontcolor
 rex_redactor2_profiles_plugins_fontfamily_description = Defines the fontfamily
 rex_redactor2_profiles_plugins_fontsize_description = Defines the fontsize
 rex_redactor2_profiles_plugins_fullscreen_description = Switches to fullscreen
-rex_redactor2_profiles_plugins_heading1_description = Inserts a headline with size 1
-rex_redactor2_profiles_plugins_heading2_description = Inserts a headline with size 2
-rex_redactor2_profiles_plugins_heading3_description = Inserts a headline with size 3
-rex_redactor2_profiles_plugins_heading4_description = Inserts a headline with size 4
-rex_redactor2_profiles_plugins_heading5_description = Inserts a headline with size 5
-rex_redactor2_profiles_plugins_heading6_description = Inserts a headline with size 6
+rex_redactor2_profiles_plugins_groupheading_description = Inserts a heading via dropdown
+rex_redactor2_profiles_plugins_grouplink_description = Inserts a link via dropdown
+rex_redactor2_profiles_plugins_heading1_description = Inserts a heading with size 1
+rex_redactor2_profiles_plugins_heading2_description = Inserts a heading with size 2
+rex_redactor2_profiles_plugins_heading3_description = Inserts a heading with size 3
+rex_redactor2_profiles_plugins_heading4_description = Inserts a heading with size 4
+rex_redactor2_profiles_plugins_heading5_description = Inserts a heading with size 5
+rex_redactor2_profiles_plugins_heading6_description = Inserts a heading with size 6
 rex_redactor2_profiles_plugins_horizontalrule_description = Inserts a horizontal rule
 rex_redactor2_profiles_plugins_internallink_description = Fügt einen internen Link mit Hilfe der Linkmap ein
 rex_redactor2_profiles_plugins_italic_description = Makes the marked text italic
