--- a/lang/de_de.lang
+++ b/lang/de_de.lang
@@ -1,7 +1,7 @@
 rex_redactor2_title = Redactor 2 Editor
 
 #subpage help
-rex_redactor2_help_infotext = Das Addon bindet den WYSIWYG-Editor redactor im Backend ein.<br><br>Textareas mit der Klasse <i>redactorEditor-%profileName%</i> werden automatisch von einem normalen Texteingabefeld in einen WYSIWYG-Editor umgewandelt.<br>z.B.: <textarea id="redactor_full" <b>class="redactorEditor-full"</b>></textarea><br><br>Im Backend können verschiedene Profile mit unterschiedlichen Konfigurationseinstellungen für den Redactor-Editor angelegt werden.</b>
+rex_redactor2_help_infotext = Das Addon bindet den WYSIWYG-Editor redactor im Backend ein.<br><br>Textareas mit der Klasse <i>redactorEditor2-%profileName%</i> werden automatisch von einem normalen Texteingabefeld in einen WYSIWYG-Editor umgewandelt.<br>z.B.: <textarea <b>class="redactorEditor2-full"</b>></textarea><br><br>Im Backend können verschiedene Profile mit unterschiedlichen Konfigurationseinstellungen für den Redactor-Editor angelegt werden.</b>
 
 #subpage profiles
 rex_redactor2_profiles = Profile
@@ -50,6 +50,8 @@ rex_redactor2_profiles_plugins_media_description = Fügt ein Bild mithilfe des M
 rex_redactor2_profiles_plugins_medialink_description = Fügt einen Link auf eine Datei aus dem Medienpool ein
 rex_redactor2_profiles_plugins_orderedlist_description = Fügt eine sortierte Liste ein
 rex_redactor2_profiles_plugins_properties_description = Gibt dem aktuellen Block eine benutzerdefinierte ID oder Klasse
+rex_redactor2_profiles_plugins_sub_description = Stellt Text hoch
+rex_redactor2_profiles_plugins_sup_description = Stellt Text tief
 rex_redactor2_profiles_plugins_source_description = Wechselt in den HTML-Modus
 rex_redactor2_profiles_plugins_table_description = Fügt eine Tabelle ein
 rex_redactor2_profiles_plugins_textdirection_description = Legt die Textausrichtung fest
