--- a/lang/en_gb.lang
+++ b/lang/en_gb.lang
@@ -50,6 +50,8 @@ rex_redactor2_profiles_plugins_media_description = Fügt ein Bild mithilfe des M
 rex_redactor2_profiles_plugins_medialink_description = Fügt einen Link auf eine Datei aus dem Medienpool ein
 rex_redactor2_profiles_plugins_orderedlist_description = Inserts an ordererd list
 rex_redactor2_profiles_plugins_properties_description = Gibt dem aktuellen Block eine benutzerdefinierte ID oder Klasse
+rex_redactor2_profiles_plugins_sub_description = Stellt Text tief
+rex_redactor2_profiles_plugins_sup_description = Stellt Text hoch
 rex_redactor2_profiles_plugins_source_description = Switches in the HTML-mode
 rex_redactor2_profiles_plugins_table_description = Inserts a table
 rex_redactor2_profiles_plugins_textdirection_description = Legt die Textausrichtung fest
