Paragraph hinzugefügt, Limiter aus Buttons entfernt

--- a/lang/en_gb.lang
+++ b/lang/en_gb.lang
@@ -17,6 +17,7 @@ rex_redactor2_profiles_label_name = Name
 rex_redactor2_profiles_label_description = Description
 rex_redactor2_profiles_label_minheight = Minimal height
 rex_redactor2_profiles_label_maxheight = Maximum height
+rex_redactor2_profiles_label_characterlimit = Characterlimit
 rex_redactor2_profiles_label_urltype = URL-Type
 rex_redactor2_profiles_label_urltype_option_relative = Relative
 rex_redactor2_profiles_label_urltype_option_absolute = Absolute
@@ -45,10 +46,10 @@ rex_redactor2_profiles_plugins_heading6_description = Inserts a heading with siz
 rex_redactor2_profiles_plugins_horizontalrule_description = Inserts a horizontal rule
 rex_redactor2_profiles_plugins_internallink_description = Fügt einen internen Link mit Hilfe der Linkmap ein
 rex_redactor2_profiles_plugins_italic_description = Makes the marked text italic
-rex_redactor2_profiles_plugins_limiter_description = Limitiert die Anzahl Zeichen, die eingegeben werden können
 rex_redactor2_profiles_plugins_media_description = Fügt ein Bild mithilfe des Medienpool ein
 rex_redactor2_profiles_plugins_medialink_description = Fügt einen Link auf eine Datei aus dem Medienpool ein
 rex_redactor2_profiles_plugins_orderedlist_description = Inserts an ordererd list
+rex_redactor2_profiles_plugins_paragraph_description = Fügt einen Paragraph ein
 rex_redactor2_profiles_plugins_properties_description = Gibt dem aktuellen Block eine benutzerdefinierte ID oder Klasse
 rex_redactor2_profiles_plugins_sub_description = Stellt Text tief
 rex_redactor2_profiles_plugins_sup_description = Stellt Text hoch
