Daten für 'Styles' Addon hinzugefügt

--- a/lang/de_de.lang
+++ b/lang/de_de.lang
@@ -51,9 +51,10 @@ rex_redactor2_profiles_plugins_medialink_description = Fügt einen Link auf eine
 rex_redactor2_profiles_plugins_orderedlist_description = Fügt eine sortierte Liste ein
 rex_redactor2_profiles_plugins_paragraph_description = Fügt einen Paragraph ein
 rex_redactor2_profiles_plugins_properties_description = Gibt dem aktuellen Block eine benutzerdefinierte ID oder Klasse
+rex_redactor2_profiles_plugins_source_description = Wechselt in den HTML-Modus
+rex_redactor2_profiles_plugins_styles_description = Ermöglicht eigene nutzbare Inline-Tags zu definieren
 rex_redactor2_profiles_plugins_sub_description = Stellt Text tief
 rex_redactor2_profiles_plugins_sup_description = Stellt Text hoch
-rex_redactor2_profiles_plugins_source_description = Wechselt in den HTML-Modus
 rex_redactor2_profiles_plugins_table_description = Fügt eine Tabelle ein
 rex_redactor2_profiles_plugins_textdirection_description = Legt die Textausrichtung fest
 rex_redactor2_profiles_plugins_underline_description = Unterstreicht den markierten Text
