--- a/lang/en_gb.lang
+++ b/lang/en_gb.lang
@@ -51,9 +51,10 @@ rex_redactor2_profiles_plugins_medialink_description = Fügt einen Link auf eine
 rex_redactor2_profiles_plugins_orderedlist_description = Inserts an ordererd list
 rex_redactor2_profiles_plugins_paragraph_description = Fügt einen Paragraph ein
 rex_redactor2_profiles_plugins_properties_description = Gibt dem aktuellen Block eine benutzerdefinierte ID oder Klasse
+rex_redactor2_profiles_plugins_source_description = Switches in the HTML-mode
+rex_redactor2_profiles_plugins_styles_description = Ermöglicht eigene nutzbare Inline-Tags zu definieren
 rex_redactor2_profiles_plugins_sub_description = Stellt Text tief
 rex_redactor2_profiles_plugins_sup_description = Stellt Text hoch
-rex_redactor2_profiles_plugins_source_description = Switches in the HTML-mode
 rex_redactor2_profiles_plugins_table_description = Inserts a table
 rex_redactor2_profiles_plugins_textdirection_description = Legt die Textausrichtung fest
 rex_redactor2_profiles_plugins_underline_description = Makes the marked text underlined
