--- a/lang/de_de.lang
+++ b/lang/de_de.lang
@@ -1,65 +1,65 @@
-rex_redactor2_title = Redactor 2 Editor
+redactor2_title = Redactor 2 Editor
 
 #subpage help
-rex_redactor2_help_infotext = Das Addon bindet den WYSIWYG-Editor redactor im Backend ein.<br><br>Textareas mit der Klasse <i>redactorEditor2-%profileName%</i> werden automatisch von einem normalen Texteingabefeld in einen WYSIWYG-Editor umgewandelt.<br>z.B.: <textarea <b>class="redactorEditor2-full"</b>></textarea><br><br>Im Backend können verschiedene Profile mit unterschiedlichen Konfigurationseinstellungen für den Redactor-Editor angelegt werden.</b><br><br>Es gibt die Möglichkeit, dem Editor eigene CSS-Styles zu geben. Dafür muss lediglich im Ordner /assets/addons/rex_redactor2 eine Datei mit dem Namen skin.css angelegt werden.
+redactor2_help_infotext = Das Addon bindet den WYSIWYG-Editor redactor im Backend ein.<br><br>Textareas mit der Klasse <i>redactorEditor2-%profileName%</i> werden automatisch von einem normalen Texteingabefeld in einen WYSIWYG-Editor umgewandelt.<br>z.B.: <textarea <b>class="redactorEditor2-full"</b>></textarea><br><br>Im Backend können verschiedene Profile mit unterschiedlichen Konfigurationseinstellungen für den Redactor-Editor angelegt werden.</b><br><br>Es gibt die Möglichkeit, dem Editor eigene CSS-Styles zu geben. Dafür muss lediglich im Ordner /assets/addons/redactor2 eine Datei mit dem Namen skin.css angelegt werden.
 
 #subpage profiles
-rex_redactor2_profiles = Profile
-rex_redactor2_profiles_norowsmessage = Es wurden keine Profile gefunden
+redactor2_profiles = Profile
+redactor2_profiles_norowsmessage = Es wurden keine Profile gefunden
 
-rex_redactor2_profiles_column_name = Name
-rex_redactor2_profiles_column_description = Beschreibung
+redactor2_profiles_column_name = Name
+redactor2_profiles_column_description = Beschreibung
 
-rex_redactor2_profiles_formcaption_add = Profil hinzufügen
-rex_redactor2_profiles_formcaption_edit = Profil editieren
+redactor2_profiles_formcaption_add = Profil hinzufügen
+redactor2_profiles_formcaption_edit = Profil editieren
 
-rex_redactor2_profiles_label_name = Name
-rex_redactor2_profiles_label_description = Beschreibung
-rex_redactor2_profiles_label_minheight = Mindesthöhe
-rex_redactor2_profiles_label_maxheight = Maximalhöhe
-rex_redactor2_profiles_label_characterlimit = Zeichenlimit
-rex_redactor2_profiles_label_urltype = URL-Art
-rex_redactor2_profiles_label_urltype_option_relative = Relativ
-rex_redactor2_profiles_label_urltype_option_absolute = Absolut
-rex_redactor2_profiles_label_redactorplugins = Buttons
+redactor2_profiles_label_name = Name
+redactor2_profiles_label_description = Beschreibung
+redactor2_profiles_label_minheight = Mindesthöhe
+redactor2_profiles_label_maxheight = Maximalhöhe
+redactor2_profiles_label_characterlimit = Zeichenlimit
+redactor2_profiles_label_urltype = URL-Art
+redactor2_profiles_label_urltype_option_relative = Relativ
+redactor2_profiles_label_urltype_option_absolute = Absolut
+redactor2_profiles_label_redactorplugins = Buttons
 
-rex_redactor2_profiles_plugins_alignment_description = Setzt die Ausrichtung des markierten Texts
-rex_redactor2_profiles_plugins_blockquote_description = Fügt ein Zitat ein
-rex_redactor2_profiles_plugins_bold_description = Macht den markierten Text fett
-rex_redactor2_profiles_plugins_cleaner_description = Entfernt alle Formatierungen/Styles vom markieren Text
-rex_redactor2_profiles_plugins_clips_description = Fügt vordefinierte Textsnippets ein
-rex_redactor2_profiles_plugins_deleted_description = Streicht den markierten Text durch
-rex_redactor2_profiles_plugins_emaillink_description = Fügt einen Email-Link ein
-rex_redactor2_profiles_plugins_externallink_description = Fügt einen externen Link ein
-rex_redactor2_profiles_plugins_fontcolor_description = Definiert die Schriftfarbe
-rex_redactor2_profiles_plugins_fontfamily_description = Definiert die Schriftart
-rex_redactor2_profiles_plugins_fontsize_description = Definiert die Schriftgrösse
-rex_redactor2_profiles_plugins_fullscreen_description = Ermöglicht Vollbild
-rex_redactor2_profiles_plugins_groupheading_description = Fügt eine Überschrift via Dropdown ein
-rex_redactor2_profiles_plugins_grouplink_description = Fügt einen Link via Dropdown ein
-rex_redactor2_profiles_plugins_heading1_description = Fügt eine Überschrift der Grösse 1 ein
-rex_redactor2_profiles_plugins_heading2_description = Fügt eine Überschrift der Grösse 2 ein
-rex_redactor2_profiles_plugins_heading3_description = Fügt eine Überschrift der Grösse 3 ein
-rex_redactor2_profiles_plugins_heading4_description = Fügt eine Überschrift der Grösse 4 ein
-rex_redactor2_profiles_plugins_heading5_description = Fügt eine Überschrift der Grösse 5 ein
-rex_redactor2_profiles_plugins_heading6_description = Fügt eine Überschrift der Grösse 6 ein
-rex_redactor2_profiles_plugins_horizontalrule_description = Fügt eine horizontale Linie ein
-rex_redactor2_profiles_plugins_internallink_description = Fügt einen internen Link mit Hilfe der Linkmap ein
-rex_redactor2_profiles_plugins_italic_description = Macht den markierten Text kursiv
-rex_redactor2_profiles_plugins_media_description = Fügt ein Bild mithilfe des Medienpool ein
-rex_redactor2_profiles_plugins_medialink_description = Fügt einen Link auf eine Datei aus dem Medienpool ein
-rex_redactor2_profiles_plugins_orderedlist_description = Fügt eine sortierte Liste ein
-rex_redactor2_profiles_plugins_paragraph_description = Fügt einen Paragraph ein
-rex_redactor2_profiles_plugins_properties_description = Gibt dem aktuellen Block eine benutzerdefinierte ID oder Klasse
-rex_redactor2_profiles_plugins_source_description = Wechselt in den HTML-Modus
-rex_redactor2_profiles_plugins_styles_description = Ermöglicht eigene nutzbare Inline-Tags zu definieren
-rex_redactor2_profiles_plugins_sub_description = Stellt Text tief
-rex_redactor2_profiles_plugins_sup_description = Stellt Text hoch
-rex_redactor2_profiles_plugins_table_description = Fügt eine Tabelle ein
-rex_redactor2_profiles_plugins_textdirection_description = Legt die Textausrichtung fest
-rex_redactor2_profiles_plugins_underline_description = Unterstreicht den markierten Text
-rex_redactor2_profiles_plugins_unorderedlist_description = Fügt eine unsortierte Liste ein
+redactor2_profiles_plugins_alignment_description = Setzt die Ausrichtung des markierten Texts
+redactor2_profiles_plugins_blockquote_description = Fügt ein Zitat ein
+redactor2_profiles_plugins_bold_description = Macht den markierten Text fett
+redactor2_profiles_plugins_cleaner_description = Entfernt alle Formatierungen/Styles vom markieren Text
+redactor2_profiles_plugins_clips_description = Fügt vordefinierte Textsnippets ein
+redactor2_profiles_plugins_deleted_description = Streicht den markierten Text durch
+redactor2_profiles_plugins_emaillink_description = Fügt einen Email-Link ein
+redactor2_profiles_plugins_externallink_description = Fügt einen externen Link ein
+redactor2_profiles_plugins_fontcolor_description = Definiert die Schriftfarbe
+redactor2_profiles_plugins_fontfamily_description = Definiert die Schriftart
+redactor2_profiles_plugins_fontsize_description = Definiert die Schriftgrösse
+redactor2_profiles_plugins_fullscreen_description = Ermöglicht Vollbild
+redactor2_profiles_plugins_groupheading_description = Fügt eine Überschrift via Dropdown ein
+redactor2_profiles_plugins_grouplink_description = Fügt einen Link via Dropdown ein
+redactor2_profiles_plugins_heading1_description = Fügt eine Überschrift der Grösse 1 ein
+redactor2_profiles_plugins_heading2_description = Fügt eine Überschrift der Grösse 2 ein
+redactor2_profiles_plugins_heading3_description = Fügt eine Überschrift der Grösse 3 ein
+redactor2_profiles_plugins_heading4_description = Fügt eine Überschrift der Grösse 4 ein
+redactor2_profiles_plugins_heading5_description = Fügt eine Überschrift der Grösse 5 ein
+redactor2_profiles_plugins_heading6_description = Fügt eine Überschrift der Grösse 6 ein
+redactor2_profiles_plugins_horizontalrule_description = Fügt eine horizontale Linie ein
+redactor2_profiles_plugins_internallink_description = Fügt einen internen Link mit Hilfe der Linkmap ein
+redactor2_profiles_plugins_italic_description = Macht den markierten Text kursiv
+redactor2_profiles_plugins_media_description = Fügt ein Bild mithilfe des Medienpool ein
+redactor2_profiles_plugins_medialink_description = Fügt einen Link auf eine Datei aus dem Medienpool ein
+redactor2_profiles_plugins_orderedlist_description = Fügt eine sortierte Liste ein
+redactor2_profiles_plugins_paragraph_description = Fügt einen Paragraph ein
+redactor2_profiles_plugins_properties_description = Gibt dem aktuellen Block eine benutzerdefinierte ID oder Klasse
+redactor2_profiles_plugins_source_description = Wechselt in den HTML-Modus
+redactor2_profiles_plugins_styles_description = Ermöglicht eigene nutzbare Inline-Tags zu definieren
+redactor2_profiles_plugins_sub_description = Stellt Text tief
+redactor2_profiles_plugins_sup_description = Stellt Text hoch
+redactor2_profiles_plugins_table_description = Fügt eine Tabelle ein
+redactor2_profiles_plugins_textdirection_description = Legt die Textausrichtung fest
+redactor2_profiles_plugins_underline_description = Unterstreicht den markierten Text
+redactor2_profiles_plugins_unorderedlist_description = Fügt eine unsortierte Liste ein
 
 #permissions
-perm_general_rex_redactor2[] = Rechte für Redactor-Addon
-perm_general_rex_redactor2[profiles] = Rechte für die Seite 'Profile' des Redactor-Addons
+perm_general_redactor2[] = Rechte für Redactor-Addon
+perm_general_redactor2[profiles] = Rechte für die Seite 'Profile' des Redactor-Addons
