--- a/lang/de_de.lang
+++ b/lang/de_de.lang
@@ -51,6 +51,7 @@ redactor2_profiles_plugins_medialink_description = Fügt einen Link auf eine Dat
 redactor2_profiles_plugins_orderedlist_description = Fügt eine sortierte Liste ein
 redactor2_profiles_plugins_paragraph_description = Fügt einen Paragraph ein
 redactor2_profiles_plugins_properties_description = Gibt dem aktuellen Block eine benutzerdefinierte ID oder Klasse
+redactor2_profiles_plugins_redo_description = Wiederholt die letzte Aktion
 redactor2_profiles_plugins_source_description = Wechselt in den HTML-Modus
 redactor2_profiles_plugins_styles_description = Ermöglicht eigene nutzbare Inline-Tags zu definieren
 redactor2_profiles_plugins_sub_description = Stellt Text tief
@@ -58,6 +59,7 @@ redactor2_profiles_plugins_sup_description = Stellt Text hoch
 redactor2_profiles_plugins_table_description = Fügt eine Tabelle ein
 redactor2_profiles_plugins_textdirection_description = Legt die Textausrichtung fest
 redactor2_profiles_plugins_underline_description = Unterstreicht den markierten Text
+redactor2_profiles_plugins_undo_description = Macht die letzte Aktion rückgängig
 redactor2_profiles_plugins_unorderedlist_description = Fügt eine unsortierte Liste ein
 
 #permissions
