shortcuts option added

--- a/lang/de_de.lang
+++ b/lang/de_de.lang
@@ -21,6 +21,7 @@ redactor2_profiles_label_characterlimit = Zeichenlimit
 redactor2_profiles_label_urltype = URL-Art
 redactor2_profiles_label_urltype_option_relative = Relativ
 redactor2_profiles_label_urltype_option_absolute = Absolut
+redactor2_profiles_label_shortcuts = Verwende Shortcuts
 redactor2_profiles_label_redactorplugins = Buttons
 
 redactor2_profiles_plugins_alignment_description = Setzt die Ausrichtung des markierten Texts
