--- a/lang/en_gb.lang
+++ b/lang/en_gb.lang
@@ -21,6 +21,7 @@ redactor2_profiles_label_characterlimit = Characterlimit
 redactor2_profiles_label_urltype = URL-Type
 redactor2_profiles_label_urltype_option_relative = Relative
 redactor2_profiles_label_urltype_option_absolute = Absolute
+redactor2_profiles_label_shortcuts = Use Shortcuts
 redactor2_profiles_label_redactorplugins = Buttons
 
 redactor2_profiles_plugins_alignment_description = Setzt die Ausrichtung des markierten Texts
