--- a/lang/en_gb.lang
+++ b/lang/en_gb.lang
@@ -9,6 +9,7 @@ redactor2_profiles_norowsmessage = No profiles were found
 
 redactor2_profiles_column_name = Name
 redactor2_profiles_column_description = Description
+redactor2_profiles_column_cssclass = CSS-Class
 
 redactor2_profiles_formcaption_add = Add profile
 redactor2_profiles_formcaption_edit = Edit profile
