--- a/lang/de_de.lang
+++ b/lang/de_de.lang
@@ -44,6 +44,7 @@ redactor2_profiles_plugins_fontsize_description = Definiert die Schriftgrösse
 redactor2_profiles_plugins_fullscreen_description = Ermöglicht Vollbild
 redactor2_profiles_plugins_groupheading_description = Fügt eine Überschrift via Dropdown ein
 redactor2_profiles_plugins_grouplink_description = Fügt einen Link via Dropdown ein
+redactor2_profiles_plugins_grouplist_description = Fügt eine Liste via Dropdown ein
 redactor2_profiles_plugins_heading1_description = Fügt eine Überschrift der Grösse 1 ein
 redactor2_profiles_plugins_heading2_description = Fügt eine Überschrift der Grösse 2 ein
 redactor2_profiles_plugins_heading3_description = Fügt eine Überschrift der Grösse 3 ein
