--- a/lang/en_gb.lang
+++ b/lang/en_gb.lang
@@ -44,6 +44,7 @@ redactor2_profiles_plugins_fontsize_description = Defines the fontsize
 redactor2_profiles_plugins_fullscreen_description = Switches to fullscreen
 redactor2_profiles_plugins_groupheading_description = Inserts a heading via dropdown
 redactor2_profiles_plugins_grouplink_description = Inserts a link via dropdown
+redactor2_profiles_plugins_grouplist_description = Inserts a list via dropdown
 redactor2_profiles_plugins_heading1_description = Inserts a heading with size 1
 redactor2_profiles_plugins_heading2_description = Inserts a heading with size 2
 redactor2_profiles_plugins_heading3_description = Inserts a heading with size 3
